# google-lite

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
bench/: api_bench.cpp  bench_main.cpp
data/: sample_wiki.tsv
data/store/: docs.tsv
docs/: demo.md
scripts/: prepare_wiki.py  smoke_browser_endpoints.sh  smoke_opensearch.sh
src/api/: http_server.cpp  http_server.h
src/app/: crawl_index_tool.cpp  main.cpp  search_api_main.cpp
src/core/: document.h  normalizer.cpp  normalizer.h  tokenizer.cpp  tokenizer.h
src/crawl/: crawler.cpp  crawler.h  html_extractor.cpp  html_extractor.h
src/index/: index_snapshot.cpp  index_snapshot.h  inverted_index.cpp  inverted_index.h
src/io/: doc_store.cpp  doc_store.h  parallel_index_builder.cpp  parallel_index_builder.h  wiki_loader.cpp  wiki_loader.h
src/query/: query_executor.cpp  query_executor.h  query_parser.cpp  query_parser.h
src/ranking/: bm25_ranker.cpp  bm25_ranker.h
src/search/: opensearch_client.cpp  opensearch_client.h  query_cache.cpp  query_cache.h  search_service.cpp  search_service.h  search_types.h
src/suggest/: spell_corrector.cpp  spell_corrector.h  trie.cpp  trie.h
tests/: test_main.cpp
web/: app.js  index.html  styles.css
